--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "material-ui": "0.16.5",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-tap-event-plugin": "2.0.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
