--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-dom": "^15.4.1",
     "react-redux": "4.4.6",
     "react-tap-event-plugin": "2.0.1",
-    "redux": "3.6.0"
+    "redux": "3.6.0",
+    "redux-undo": "0.6.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
