--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
   "dependencies": {
     "material-ui": "0.16.5",
     "react": "^15.4.1",
+    "react-collapse": "2.3.3",
     "react-dom": "^15.4.1",
+    "react-height": "2.1.1",
+    "react-motion": "0.4.7",
     "react-redux": "4.4.6",
     "react-tap-event-plugin": "2.0.1",
     "redux": "3.6.0",
