--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "node-sass": "3.13.1",
-    "sass-loader": "4.0.2",
     "autoprefixer": "6.5.1",
     "babel-core": "6.17.0",
     "babel-eslint": "7.0.0",
@@ -34,12 +32,14 @@
     "http-proxy-middleware": "0.17.2",
     "jest": "17.0.2",
     "json-loader": "0.5.4",
+    "node-sass": "3.13.1",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.1",
     "recursive-readdir": "2.1.0",
+    "sass-loader": "4.0.2",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
@@ -50,6 +50,8 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "bootstrap-sass": "3.3.7",
+    "lodash": "4.17.4",
     "material-ui": "0.16.5",
     "react": "^15.4.1",
     "react-collapse": "2.3.3",
