--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "react-height": "2.1.1",
     "react-motion": "0.4.7",
     "react-redux": "4.4.6",
+    "react-router": "3.0.0",
+    "react-router-redux": "4.0.7",
     "react-tap-event-plugin": "2.0.1",
     "redux": "3.6.0",
     "redux-undo": "0.6.1"
