--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-eslint": "7.0.0",
     "babel-jest": "17.0.2",
     "babel-loader": "6.2.7",
+    "babel-polyfill": "6.20.0",
     "babel-preset-react-app": "^2.0.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
