--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-collapse": "2.3.3",
     "react-dom": "^15.4.1",
     "react-height": "2.1.1",
+    "react-modal": "1.6.5",
     "react-motion": "0.4.7",
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
