--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "react-router-redux": "4.0.7",
     "react-tap-event-plugin": "2.0.1",
     "redux": "3.6.0",
-    "redux-undo": "0.6.1"
+    "redux-undo": "0.6.1",
+    "shortid": "2.2.6"
   },
   "scripts": {
     "start": "node scripts/start.js",
