--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "0.26.0",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
+    "enzyme": "2.7.0",
     "eslint": "3.8.1",
     "eslint-config-react-app": "^0.5.0",
     "eslint-loader": "1.6.0",
@@ -38,9 +39,13 @@
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
+    "react-addons-test-utils": "15.4.2",
     "react-dev-utils": "^0.4.1",
+    "react-dom": "15.4.2",
+    "react-test-renderer": "15.4.2",
     "recursive-readdir": "2.1.0",
     "sass-loader": "4.0.2",
+    "sinon": "1.17.7",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
