--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-tap-event-plugin": "2.0.1",
     "redux": "3.6.0",
     "redux-undo": "0.6.1",
+    "reselect": "2.5.4",
     "shortid": "2.2.6"
   },
   "scripts": {
