--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "devDependencies": {
     "autoprefixer": "6.5.1",
-    "babel-core": "6.17.0",
-    "babel-eslint": "7.0.0",
+    "babel-core": "6.21.0",
+    "babel-loader": "6.2.10",
+    "babel-preset-stage-1": "6.16.0",
+    "babel-plugin-transform-class-properties": "6.19.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-es2017": "6.16.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-react-hmre": "1.1.1",
     "babel-jest": "17.0.2",
-    "babel-loader": "6.2.7",
     "babel-polyfill": "6.20.0",
-    "babel-preset-react-app": "^2.0.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
@@ -59,9 +64,9 @@
     "bootstrap-sass": "3.3.7",
     "lodash": "4.17.4",
     "material-ui": "0.16.5",
-    "react": "^15.4.1",
+    "react": "15.4.2",
     "react-collapse": "2.3.3",
-    "react-dom": "^15.4.1",
+    "react-dom": "15.4.2",
     "react-height": "2.1.1",
     "react-modal": "1.6.5",
     "react-motion": "0.4.7",
@@ -105,8 +110,21 @@
   },
   "babel": {
     "presets": [
-      "react-app"
-    ]
+      "es2015",
+      "react",
+      "stage-1"
+    ],
+    "plugins": [
+      "transform-decorators-legacy",
+      "transform-class-properties"
+    ],
+    "env": {
+      "start": {
+        "presets": [
+          "react-hmre"
+        ]
+      }
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
