--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "devDependencies": {
     "autoprefixer": "6.5.1",
     "babel-core": "6.21.0",
+    "babel-eslint": "8.0.1",
+    "babel-jest": "17.0.2",
     "babel-loader": "6.2.10",
-    "babel-preset-stage-1": "6.16.0",
     "babel-plugin-transform-class-properties": "6.19.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-polyfill": "6.20.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-es2017": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-react-hmre": "1.1.1",
-    "babel-jest": "17.0.2",
-    "babel-polyfill": "6.20.0",
+    "babel-preset-stage-1": "6.16.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
@@ -39,7 +40,7 @@
     "http-proxy-middleware": "0.17.2",
     "jest": "17.0.2",
     "json-loader": "0.5.4",
-    "node-sass": "3.13.1",
+    "node-sass": "4.5.3",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
