--- a/package.json
+++ b/package.json
@@ -1,139 +1,144 @@
 {
-  "name": "reactjs-learning",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "autoprefixer": "6.5.1",
-    "babel-core": "6.21.0",
-    "babel-eslint": "8.0.1",
-    "babel-jest": "17.0.2",
-    "babel-loader": "6.2.10",
-    "babel-plugin-transform-class-properties": "6.19.0",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-polyfill": "6.20.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-es2017": "6.16.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-preset-stage-1": "6.16.0",
-    "case-sensitive-paths-webpack-plugin": "1.1.4",
-    "chalk": "1.1.3",
-    "connect-history-api-fallback": "1.3.0",
-    "cross-spawn": "4.0.2",
-    "css-loader": "0.26.0",
-    "detect-port": "1.0.1",
-    "dotenv": "2.0.0",
-    "enzyme": "2.7.0",
-    "eslint": "3.8.1",
-    "eslint-config-react-app": "^0.5.0",
-    "eslint-loader": "1.6.0",
-    "eslint-plugin-flowtype": "2.21.0",
-    "eslint-plugin-import": "2.0.1",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.4.1",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.9.0",
-    "filesize": "3.3.0",
-    "fs-extra": "0.30.0",
-    "gzip-size": "3.0.0",
-    "html-webpack-plugin": "2.24.0",
-    "http-proxy-middleware": "0.17.2",
-    "jest": "17.0.2",
-    "json-loader": "0.5.4",
-    "node-sass": "4.5.3",
-    "object-assign": "4.1.0",
-    "path-exists": "2.1.0",
-    "postcss-loader": "1.0.0",
-    "promise": "7.1.1",
-    "prop-types": "15.6.0",
-    "react-addons-test-utils": "15.4.2",
-    "react-dev-utils": "^0.4.1",
-    "react-dom": "15.4.2",
-    "react-test-renderer": "15.4.2",
-    "recursive-readdir": "2.1.0",
-    "sass-loader": "4.0.2",
-    "sinon": "1.17.7",
-    "strip-ansi": "3.0.1",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.14.0",
-    "webpack-dev-server": "1.16.2",
-    "webpack-manifest-plugin": "1.1.0",
-    "webpack-subresource-integrity": "0.8.1",
-    "whatwg-fetch": "1.0.0",
-    "why-did-you-update": "0.0.8"
-  },
-  "dependencies": {
-    "bootstrap-sass": "3.3.7",
-    "classnames": "2.2.5",
-    "history": "4.7.2",
-    "lodash": "4.17.4",
-    "query-string": "5.0.0",
-    "react": "15.4.2",
-    "react-collapse": "2.3.3",
-    "react-dom": "15.4.2",
-    "react-height": "2.1.1",
-    "react-modal": "1.6.5",
-    "react-motion": "0.4.7",
-    "react-redux": "4.4.6",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
-    "react-router-redux": "5.0.0-alpha.6",
-    "react-router-transition": "0.0.6",
-    "redux": "3.6.0",
-    "redux-orm": "0.9.4",
-    "redux-undo": "0.6.1",
-    "reselect": "2.5.4",
-    "shortid": "2.2.6"
-  },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
-    ],
-    "setupFiles": [
-      "<rootDir>\\config\\polyfills.js"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>[/\\\\](build|docs|node_modules)[/\\\\]"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>\\config\\jest\\cssTransform.js",
-      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>\\config\\jest\\fileTransform.js"
+    "name": "reactjs-learning",
+    "version": "0.1.0",
+    "private": false,
+    "devDependencies": {
+        "autoprefixer": "6.5.1",
+        "babel-core": "6.21.0",
+        "babel-eslint": "8.0.1",
+        "babel-jest": "17.0.2",
+        "babel-loader": "6.2.10",
+        "babel-plugin-transform-class-properties": "6.19.0",
+        "babel-plugin-transform-decorators-legacy": "1.3.4",
+        "babel-polyfill": "6.20.0",
+        "babel-preset-es2015": "6.18.0",
+        "babel-preset-es2017": "6.16.0",
+        "babel-preset-react": "6.16.0",
+        "babel-preset-react-hmre": "1.1.1",
+        "babel-preset-stage-1": "6.16.0",
+        "case-sensitive-paths-webpack-plugin": "1.1.4",
+        "chalk": "1.1.3",
+        "connect-history-api-fallback": "1.3.0",
+        "cross-spawn": "4.0.2",
+        "css-loader": "0.26.0",
+        "detect-port": "1.0.1",
+        "dotenv": "2.0.0",
+        "enzyme": "2.7.0",
+        "eslint": "3.8.1",
+        "eslint-config-react-app": "^0.5.0",
+        "eslint-loader": "1.6.0",
+        "eslint-plugin-flowtype": "2.21.0",
+        "eslint-plugin-import": "2.0.1",
+        "eslint-plugin-jsx-a11y": "2.2.3",
+        "eslint-plugin-react": "6.4.1",
+        "extract-text-webpack-plugin": "1.0.1",
+        "file-loader": "0.9.0",
+        "filesize": "3.3.0",
+        "fs-extra": "0.30.0",
+        "gzip-size": "3.0.0",
+        "html-webpack-plugin": "2.24.0",
+        "http-proxy-middleware": "0.17.2",
+        "jest": "17.0.2",
+        "json-loader": "0.5.4",
+        "node-sass": "4.5.3",
+        "object-assign": "4.1.0",
+        "path-exists": "2.1.0",
+        "postcss-loader": "1.0.0",
+        "postcss-scss": "1.0.2",
+        "promise": "7.1.1",
+        "prop-types": "15.6.0",
+        "react-addons-test-utils": "15.4.2",
+        "react-dev-utils": "^0.4.1",
+        "react-dom": "15.4.2",
+        "react-test-renderer": "15.4.2",
+        "recursive-readdir": "2.1.0",
+        "sass-loader": "4.0.2",
+        "sinon": "1.17.7",
+        "strip-ansi": "3.0.1",
+        "style-loader": "0.13.1",
+        "url-loader": "0.5.7",
+        "webpack": "1.14.0",
+        "webpack-dev-server": "1.16.2",
+        "webpack-manifest-plugin": "1.1.0",
+        "webpack-subresource-integrity": "0.8.1",
+        "whatwg-fetch": "1.0.0",
+        "why-did-you-update": "0.0.8"
     },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    }
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react",
-      "stage-1"
-    ],
-    "plugins": [
-      "transform-decorators-legacy",
-      "transform-class-properties"
-    ],
-    "env": {
-      "start": {
+    "dependencies": {
+        "bootstrap-sass": "3.3.7",
+        "classnames": "2.2.5",
+        "compression": "1.7.1",
+        "express": "4.16.2",
+        "history": "4.7.2",
+        "lodash": "4.17.4",
+        "morgan": "1.9.0",
+        "query-string": "5.0.0",
+        "react": "15.4.2",
+        "react-collapse": "2.3.3",
+        "react-dom": "15.4.2",
+        "react-height": "2.1.1",
+        "react-modal": "1.6.5",
+        "react-motion": "0.4.7",
+        "react-redux": "4.4.6",
+        "react-router": "4.2.0",
+        "react-router-dom": "4.2.2",
+        "react-router-redux": "5.0.0-alpha.6",
+        "react-router-transition": "0.0.6",
+        "redux": "3.6.0",
+        "redux-orm": "0.9.4",
+        "redux-undo": "0.6.1",
+        "reselect": "2.5.4",
+        "shortid": "2.2.6"
+    },
+    "scripts": {
+        "start": "node server/server.js",
+        "dev": "node scripts/start.js",
+        "build": "node scripts/build.js",
+        "test": "node scripts/test.js --env=jsdom"
+    },
+    "jest": {
+        "collectCoverageFrom": [
+            "src/**/*.{js,jsx}"
+        ],
+        "setupFiles": [
+            "<rootDir>\\config\\polyfills.js"
+        ],
+        "testPathIgnorePatterns": [
+            "<rootDir>[/\\\\](build|docs|node_modules)[/\\\\]"
+        ],
+        "testEnvironment": "node",
+        "testURL": "http://localhost",
+        "transform": {
+            "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
+            "^.+\\.css$": "<rootDir>\\config\\jest\\cssTransform.js",
+            "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>\\config\\jest\\fileTransform.js"
+        },
+        "transformIgnorePatterns": [
+            "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
+        ],
+        "moduleNameMapper": {
+            "^react-native$": "react-native-web"
+        }
+    },
+    "babel": {
         "presets": [
-          "react-hmre"
-        ]
-      }
+            "es2015",
+            "react",
+            "stage-1"
+        ],
+        "plugins": [
+            "transform-decorators-legacy",
+            "transform-class-properties"
+        ],
+        "env": {
+            "start": {
+                "presets": [
+                    "react-hmre"
+                ]
+            }
+        }
+    },
+    "eslintConfig": {
+        "extends": "react-app"
     }
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  }
 }
