--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "react-router-dom": "4.2.2",
         "react-router-redux": "5.0.0-alpha.6",
         "react-router-transition": "0.0.6",
+        "react-swipeable-views": "0.12.8",
         "redux": "3.6.0",
         "redux-orm": "0.9.4",
         "redux-undo": "0.6.1",
