--- a/package.json
+++ b/package.json
@@ -13,7 +13,32 @@
     "test": "node scripts/test.js --env=jsdom",
     "postinstall": "npm run build"
   },
-  "devDependencies": {
+  "dependencies": {
+    "bootstrap-sass": "3.3.7",
+    "classnames": "2.2.5",
+    "compression": "1.7.1",
+    "express": "4.16.2",
+    "history": "4.7.2",
+    "lodash": "4.17.4",
+    "morgan": "1.9.0",
+    "query-string": "5.0.0",
+    "react": "15.4.2",
+    "react-collapse": "2.3.3",
+    "react-dom": "15.4.2",
+    "react-height": "2.1.1",
+    "react-modal": "1.6.5",
+    "react-motion": "0.4.7",
+    "react-redux": "4.4.6",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
+    "react-router-redux": "5.0.0-alpha.6",
+    "react-router-transition": "0.0.6",
+    "react-swipeable-views": "0.12.8",
+    "redux": "3.6.0",
+    "redux-orm": "0.9.4",
+    "redux-undo": "0.6.1",
+    "reselect": "2.5.4",
+    "shortid": "2.2.6",
     "autoprefixer": "6.5.1",
     "babel-core": "6.21.0",
     "babel-eslint": "8.0.1",
@@ -60,7 +85,6 @@
     "prop-types": "15.6.0",
     "react-addons-test-utils": "15.4.2",
     "react-dev-utils": "^0.4.1",
-    "react-dom": "15.4.2",
     "react-test-renderer": "15.4.2",
     "recursive-readdir": "2.1.0",
     "sass-loader": "4.0.2",
@@ -74,33 +98,6 @@
     "webpack-subresource-integrity": "0.8.1",
     "whatwg-fetch": "1.0.0",
     "why-did-you-update": "0.0.8"
-  },
-  "dependencies": {
-    "bootstrap-sass": "3.3.7",
-    "classnames": "2.2.5",
-    "compression": "1.7.1",
-    "express": "4.16.2",
-    "history": "4.7.2",
-    "lodash": "4.17.4",
-    "morgan": "1.9.0",
-    "query-string": "5.0.0",
-    "react": "15.4.2",
-    "react-collapse": "2.3.3",
-    "react-dom": "15.4.2",
-    "react-height": "2.1.1",
-    "react-modal": "1.6.5",
-    "react-motion": "0.4.7",
-    "react-redux": "4.4.6",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
-    "react-router-redux": "5.0.0-alpha.6",
-    "react-router-transition": "0.0.6",
-    "react-swipeable-views": "0.12.8",
-    "redux": "3.6.0",
-    "redux-orm": "0.9.4",
-    "redux-undo": "0.6.1",
-    "reselect": "2.5.4",
-    "shortid": "2.2.6"
   },
   "jest": {
     "collectCoverageFrom": [
