--- a/package.json
+++ b/package.json
@@ -14,31 +14,6 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "bootstrap-sass": "3.3.7",
-    "classnames": "2.2.5",
-    "compression": "1.7.1",
-    "express": "4.16.2",
-    "history": "4.7.2",
-    "lodash": "4.17.4",
-    "morgan": "1.9.0",
-    "query-string": "5.0.0",
-    "react": "15.4.2",
-    "react-collapse": "2.3.3",
-    "react-dom": "15.4.2",
-    "react-height": "2.1.1",
-    "react-modal": "1.6.5",
-    "react-motion": "0.4.7",
-    "react-redux": "4.4.6",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
-    "react-router-redux": "5.0.0-alpha.6",
-    "react-router-transition": "0.0.6",
-    "react-swipeable-views": "0.12.8",
-    "redux": "3.6.0",
-    "redux-orm": "0.9.4",
-    "redux-undo": "0.6.1",
-    "reselect": "2.5.4",
-    "shortid": "2.2.6",
     "autoprefixer": "6.5.1",
     "babel-core": "6.21.0",
     "babel-eslint": "8.0.1",
@@ -52,8 +27,11 @@
     "babel-preset-react": "6.16.0",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-1": "6.16.0",
+    "bootstrap-sass": "3.3.7",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
+    "classnames": "2.2.5",
+    "compression": "1.7.1",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.0",
@@ -67,15 +45,22 @@
     "eslint-plugin-import": "2.0.1",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.4.1",
+    "express": "4.16.2",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "0.30.0",
     "gzip-size": "3.0.0",
+    "history": "4.7.2",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.2",
     "jest": "17.0.2",
     "json-loader": "0.5.4",
+    "lodash": "4.17.4",
+    "mobx": "3.3.1",
+    "mobx-react": "4.3.4",
+    "mobx-state-tree": "1.1.0",
+    "morgan": "1.9.0",
     "node-sass": "4.5.3",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
@@ -83,11 +68,29 @@
     "postcss-scss": "1.0.2",
     "promise": "7.1.1",
     "prop-types": "15.6.0",
+    "query-string": "5.0.0",
+    "react": "15.4.2",
     "react-addons-test-utils": "15.4.2",
+    "react-collapse": "2.3.3",
     "react-dev-utils": "^0.4.1",
+    "react-dom": "15.4.2",
+    "react-height": "2.1.1",
+    "react-modal": "1.6.5",
+    "react-motion": "0.4.7",
+    "react-redux": "4.4.6",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
+    "react-router-redux": "5.0.0-alpha.6",
+    "react-router-transition": "0.0.6",
+    "react-swipeable-views": "0.12.8",
     "react-test-renderer": "15.4.2",
     "recursive-readdir": "2.1.0",
+    "redux": "3.6.0",
+    "redux-orm": "0.9.4",
+    "redux-undo": "0.6.1",
+    "reselect": "2.5.4",
     "sass-loader": "4.0.2",
+    "shortid": "2.2.6",
     "sinon": "1.17.7",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
